.kube/test/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: new-admin 
  name: new-admin 
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-admin 
  template:
    metadata:
      labels:
        app: new-admin 
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: apps
                    operator: In
                    values:
                      - "true"
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - image: gitlab.udevs.io:5050/delever/delever_new_admin:test 
          name: new-admin
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: new-admin 
  namespace: microservices
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: new-admin 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-admin-ingress
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - test.demo.app.delever.uz
      secretName: new-admin-tls
  rules:
    - host: test.demo.app.delever.uz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: new-admin
                port:
                  number: 80
